k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api-main
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-main
  template:
    metadata:
      labels:
        app: api-main
    spec:
      containers:
      - name: api-container
        image: nitinxyz/poc-api:caa0e9e
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5000

        readinessProbe:
          httpGet:
            path: /version
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 10

        livenessProbe:
          httpGet:
            path: /version
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 20
