k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  labels:
    app: worker-main
spec:
  replicas: 2
  selector:
    matchLabels:
      app: worker-main
  template:
    metadata:
      labels:
        app: worker-main
    spec:
      containers:
      - name: worker-container
        image: nitinxyz/poc-worker:latest
