k8s/api-canary-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-canary-service
spec:
  selector:
    app: api-main
  ports:
    - port: 5000
      targetPort: 5000
