k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
spec:
  type: ClusterIP
  selector:
    app: api-main
  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000
