k8s/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  type: ClusterIP
  selector:
    app: redis-app
  ports:
  - protocol: TCP
    port: 6379
    targetPort: 6379
